cleanup unnecessary stuff

--- a/Contact.html
+++ b/Contact.html
@@ -108,26 +108,11 @@
     <section class="page-title centred" style="background-image: url(images/Google.png);">
         <div class="container">
             <div class="content-box">
-                <h2>Contact</h2>
+                <h2>Kontakt</h2>
             </div>
         </div>
     </section>
     <!-- page-title end -->
-
-
-    <!-- google-map
-    <section class="google-map-section map-style-two">
-        <div class="google-map-area">
-            <div class="google-map" id="contact-google-map" data-map-lat="23.810331" data-map-lng="90.412521"
-                data-icon-path="images/resource/map-marker.png" data-map-title="Attemsgasse 7"
-                data-map-zoom="12" data-markers='{
-                    "marker-1": [23.810331, 90.412521, "<h4>Branch Office</h4><p>77/99 London UK</p>","images/resource/map-marker.png"]
-                }'>
-
-            </div>
-        </div>
-    </section>
- google-map end -->
 
 
     <!-- social-area
@@ -166,50 +151,14 @@
                         </div>
                     </div>
                 </div>
-                <!--  <div class="col-lg-6 col-md-12 col-sm-12 contact-column">
-                    <div class="contact-form-area">
-                        <div class="title"><h4>Get In Touch</h4></div>
-                        <div class="text">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</div>
-                        <form method="post" action="sendemail.php" id="contact-form" class="default-form">
-                            <div class="row">
-                                <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                                    <input type="text" name="username" placeholder="Your Name *" required>
-                                </div>
-                                <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                                    <input type="email" name="email" placeholder="Email Address *" required>
-                                </div>
-                                <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                                    <input type="text" name="subject" placeholder="Phone number" required>
-                                </div>
-                                <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                                    <div class="select-box">
-                                        <select name="Property" class="selectpicker">
-                                            <option>Property Type</option>
-                                            <option>Property Type</option>
-                                            <option>Property Type</option>
-                                            <option>Property Type</option>
-                                            <option>Property Type</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                                    <textarea placeholder="Your Message" name="message"></textarea>
-                                </div>
-                                <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                                    <button class="theme-btn" type="submit" name="submit-form">Submit</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div> -->
             </div>
         </div>
     </section>
     <!-- contact-section end -->
 
 
-     <!-- main-footer -->
-     <footer class="main-footer">
+    <!-- main-footer -->
+    <footer class="main-footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
@@ -253,12 +202,15 @@
                         </div>
                         <div class="single-post">
                             <div class="time">Sommer 2022</div>
-                            <div class="text"><a href="https://www.1000things.at/blog/programmvorschau-juni-in-wien/">Wien Events im Juni 2022
+                            <div class="text"><a
+                                    href="https://www.1000things.at/blog/programmvorschau-juni-in-wien/">Wien Events im
+                                    Juni 2022
                                 </a></div>
                         </div>
                         <div class="single-post">
                             <div class="time">Jetzt aktuell</div>
-                            <div class="text"><a href="https://events.at/venue/donauinsel-wien">Die Donauinsel - Dein Freizeitparadies
+                            <div class="text"><a href="https://events.at/venue/donauinsel-wien">Die Donauinsel - Dein
+                                    Freizeitparadies
                                 </a></div>
                         </div>
                         <div class="single-post">
