--- a/VideoTour.html
+++ b/VideoTour.html
@@ -34,7 +34,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-12 col-sm-12 logo-column">
                         <figure class="logo-box">
-                            <a href="index.html"><img src="images/logo.png" alt=""></a>
+                            <a href="index.html"><img src="images/Logo.png" alt=""></a>
                         </figure>
                     </div>
                     <div class="col-lg-9 col-md-12 col-sm-12 menu-column">
