--- a/Contact.html
+++ b/Contact.html
@@ -232,7 +232,7 @@
                         </div>
                         <ul class="list">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="Contact.html">Kontakt</a></li>
+                            <li><a href="contact.html">Kontakt</a></li>
                             <li><a
                                     href="https://www.privatimmobilien.at/objekt/eigentumswohnung-1220-wien-donaustadt-sonnige-maisonette-mit-terrasse-in-toplage/251237">Privatimmobilien</a>
                             </li>
