update footer & contact

--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
     <!-- page-title end -->
 
 
-    <!-- social-area
+     <!--social-area
     <div class="social-area centred">
         <div class="container">
             <ul class="social-list">
@@ -151,6 +151,24 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 contact-column">
+                    <div class="contact-info">
+                        <div class="title">
+                            <h4>Partner</h4>
+                        </div>
+                        <div class="single-item">
+                            <div class="icon-box"><i class="fa fa-users"></i></div>
+                            <div class="text"><a href="https://www.4m-immo.at/"><b>4M Immobilien</b></a></div>
+                        </div>
+                        <div class="title">
+                            <h4>Mail</h4>
+                        </div>
+                        <div class="single-item">
+                            <div class="icon-box"><i class="fa fa-envelope"></i></div>
+                            <div class="text">office(at)4m-immo.at</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -182,7 +200,7 @@
                         <div class="contact-info">
                             <!--<div class="single-item">
                                 <div class="icon-box"><i class="fa fa-phone"></i></div>
-                                 <div class="text"><span>Phone:</span> + 844 123 456 78 90</div>
+                                 <div class="text"><span>Phone:</span> + phonenumber </div>
                             </div> -->
                             <div class="single-item">
                                 <div class="icon-box"><i class="fa fa-map-marker"></i></div>
@@ -200,16 +218,28 @@
                         <div class="footer-title">
                             <h4>Neuigkeiten</h4>
                         </div>
-                        <div class="single-post">
+                        <!--<div class="single-post">
                             <div class="time">Sommer 2022</div>
                             <div class="text"><a
                                     href="https://www.1000things.at/blog/programmvorschau-juni-in-wien/">Wien Events im
                                     Juni 2022
                                 </a></div>
+                        </div> -->
+                        <div class="single-post">
+                            <div class="time">Wohin am Wochenende?</div>
+                            <div class="text"><a
+                                    href="https://events.at/was-ist-los-in-wien/veranstaltungen-wien-wochenende/401745303">(W)I(e)nsider
+                                </a></div>
+                        </div>
+                        <div class="single-post">
+                            <div class="time">Es herbstelt ...</div>
+                            <div class="text"><a
+                                    href="https://events.at/was-ist-los-in-wien/neu-im-september-wien/402130658"> ... in Wien
+                                </a></div>
                         </div>
                         <div class="single-post">
                             <div class="time">Jetzt aktuell</div>
-                            <div class="text"><a href="https://events.at/venue/donauinsel-wien">Die Donauinsel - Dein
+                            <div class="text"><a href="https://www.wien.gv.at/umwelt/gewaesser/donauinsel/">Die Donauinsel - Dein
                                     Freizeitparadies
                                 </a></div>
                         </div>
@@ -234,7 +264,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="contact.html">Kontakt</a></li>
                             <li><a
-                                    href="https://www.privatimmobilien.at/objekt/eigentumswohnung-1220-wien-donaustadt-sonnige-maisonette-mit-terrasse-in-toplage/251237">Privatimmobilien</a>
+                                    href="https://www.willhaben.at/iad/immobilien/d/eigentumswohnung/wien/wien-1220-donaustadt/maisonettenapartment-mit-terrasse-und-wellnessbreich-inkl-garage-583817238">Willhaben</a>
                             </li>
                             <!-- mein link zu den Inseraten-->
                         </ul>
@@ -279,7 +309,7 @@
     <!-- footer-bottom -->
     <div class="footer-bottom centred">
         <div class="container">
-            <div class="copyright">© Copyright 2022 <a href="javascript:;">DreamflatforSale</a>. All Rights Reserved</div>
+            <div class="copyright">Copyright @ 2022 <a href="javascript:;">DreamflatforSale</a>. All Rights Reserved</div>
         </div>
     </div>
     <!-- footer-bottom end -->
