--- a/PhotoGallery.html
+++ b/PhotoGallery.html
@@ -544,8 +544,8 @@
     </section>
     <!-- gallery-section end -->
 
-    <!-- main-footer -->
-    <footer class="main-footer">
+     <!-- main-footer -->
+     <footer class="main-footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
@@ -567,6 +567,10 @@
                             geschützt.
                         </div>
                         <div class="contact-info">
+                            <!--<div class="single-item">
+                                <div class="icon-box"><i class="fa fa-phone"></i></div>
+                                 <div class="text"><span>Phone:</span> + phonenumber </div>
+                            </div> -->
                             <div class="single-item">
                                 <div class="icon-box"><i class="fa fa-map-marker"></i></div>
                                 <div class="text"><span></span> Attemsgasse 7, 1220 Wien, Austria</div>
@@ -583,16 +587,28 @@
                         <div class="footer-title">
                             <h4>Neuigkeiten</h4>
                         </div>
-                        <div class="single-post">
+                        <!--<div class="single-post">
                             <div class="time">Sommer 2022</div>
                             <div class="text"><a
                                     href="https://www.1000things.at/blog/programmvorschau-juni-in-wien/">Wien Events im
                                     Juni 2022
                                 </a></div>
+                        </div> -->
+                        <div class="single-post">
+                            <div class="time">Wohin am Wochenende?</div>
+                            <div class="text"><a
+                                    href="https://events.at/was-ist-los-in-wien/veranstaltungen-wien-wochenende/401745303">(W)I(e)nsider
+                                </a></div>
+                        </div>
+                        <div class="single-post">
+                            <div class="time">Es herbstelt ...</div>
+                            <div class="text"><a
+                                    href="https://events.at/was-ist-los-in-wien/neu-im-september-wien/402130658"> ... in Wien
+                                </a></div>
                         </div>
                         <div class="single-post">
                             <div class="time">Jetzt aktuell</div>
-                            <div class="text"><a href="https://events.at/venue/donauinsel-wien">Die Donauinsel - Dein
+                            <div class="text"><a href="https://www.wien.gv.at/umwelt/gewaesser/donauinsel/">Die Donauinsel - Dein
                                     Freizeitparadies
                                 </a></div>
                         </div>
@@ -601,6 +617,11 @@
                             <div class="text"><a href="https://www.stadt-wien.at/veranstaltungen.html">Entdecke die City
                                 </a></div>
                         </div>
+                        <!-- <div class="single-post">
+                            <div class="time">5 Minutes Ago</div>
+                            <div class="text"><a href="blog-single.html">The addams Family making your way in the
+                                    world.</a></div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 footer-widget">
@@ -612,7 +633,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="contact.html">Kontakt</a></li>
                             <li><a
-                                    href="https://www.privatimmobilien.at/objekt/eigentumswohnung-1220-wien-donaustadt-sonnige-maisonette-mit-terrasse-in-toplage/251237">Privatimmobilien</a>
+                                    href="https://www.willhaben.at/iad/immobilien/d/eigentumswohnung/wien/wien-1220-donaustadt/maisonettenapartment-mit-terrasse-und-wellnessbreich-inkl-garage-583817238">Willhaben</a>
                             </li>
                             <!-- mein link zu den Inseraten-->
                         </ul>
@@ -623,11 +644,28 @@
                         <div class="footer-title">
                             <h4>Social Media</h4>
                         </div>
-
+                        <!-- <div class="subscribe-form">
+                            <form action="#" method="post">
+                                <div class="form-group">
+                                    <i class="fa fa-user"></i>
+                                    <input type="text" name="name" placeholder="Name" required="">
+                                </div>
+                                <div class="form-group">
+                                    <i class="fa fa-envelope-o"></i>
+                                    <input type="email" name="email" placeholder="Email" required="">
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit">SUBSCRIBE NOW</button>
+                                </div>
+                            </form>
+                        </div> -->
                         <ul class="footer-social">
                             <li><a href="https://www.facebook.com/Apartment-4-Sale-507762379338273"><i
                                         class="fa fa-facebook"></i></a></li>
-
+                            <!-- <li><a href="javascript:;"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="javascript:;"><i class="fa fa-google-plus"></i></a></li>
+                            <li><a href="javascript:;"><i class="fa fa-pinterest-p"></i></a></li>
+                            <li><a href="javascript:;"><i class="fa fa-dribbble"></i></a></li> -->
                         </ul>
                     </div>
                 </div>
@@ -637,10 +675,10 @@
     <!-- main-footer end -->
 
 
-    <!-- footer-bottom -->
-    <div class="footer-bottom centred">
+     <!-- footer-bottom -->
+     <div class="footer-bottom centred">
         <div class="container">
-            <div class="copyright">© Copyright 2022 <a href="javascript:;">DreamflatforSale</a>. All Rights Reserved</div>
+            <div class="copyright">Copyright @ 2022 <a href="javascript:;">DreamflatforSale</a>. All Rights Reserved</div>
         </div>
     </div>
     <!-- footer-bottom end -->
