--- a/index.html
+++ b/index.html
@@ -1135,8 +1135,8 @@
     <!-- testimonial-section end -->
 
 
-    <!-- main-footer -->
-    <footer class="main-footer">
+     <!-- main-footer -->
+     <footer class="main-footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
@@ -1160,7 +1160,7 @@
                         <div class="contact-info">
                             <!--<div class="single-item">
                                 <div class="icon-box"><i class="fa fa-phone"></i></div>
-                                 <div class="text"><span>Phone:</span> + 844 123 456 78 90</div>
+                                 <div class="text"><span>Phone:</span> + phonenumber </div>
                             </div> -->
                             <div class="single-item">
                                 <div class="icon-box"><i class="fa fa-map-marker"></i></div>
@@ -1178,14 +1178,29 @@
                         <div class="footer-title">
                             <h4>Neuigkeiten</h4>
                         </div>
-                        <div class="single-post">
+                        <!--<div class="single-post">
                             <div class="time">Sommer 2022</div>
-                            <div class="text"><a href="https://www.1000things.at/blog/programmvorschau-juni-in-wien/">Wien Events im Juni 2022
+                            <div class="text"><a
+                                    href="https://www.1000things.at/blog/programmvorschau-juni-in-wien/">Wien Events im
+                                    Juni 2022
+                                </a></div>
+                        </div> -->
+                        <div class="single-post">
+                            <div class="time">Wohin am Wochenende?</div>
+                            <div class="text"><a
+                                    href="https://events.at/was-ist-los-in-wien/veranstaltungen-wien-wochenende/401745303">(W)I(e)nsider
+                                </a></div>
+                        </div>
+                        <div class="single-post">
+                            <div class="time">Es herbstelt ...</div>
+                            <div class="text"><a
+                                    href="https://events.at/was-ist-los-in-wien/neu-im-september-wien/402130658"> ... in Wien
                                 </a></div>
                         </div>
                         <div class="single-post">
                             <div class="time">Jetzt aktuell</div>
-                            <div class="text"><a href="https://events.at/venue/donauinsel-wien">Die Donauinsel - Dein Freizeitparadies
+                            <div class="text"><a href="https://www.wien.gv.at/umwelt/gewaesser/donauinsel/">Die Donauinsel - Dein
+                                    Freizeitparadies
                                 </a></div>
                         </div>
                         <div class="single-post">
@@ -1209,7 +1224,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="contact.html">Kontakt</a></li>
                             <li><a
-                                    href="https://www.privatimmobilien.at/objekt/eigentumswohnung-1220-wien-donaustadt-sonnige-maisonette-mit-terrasse-in-toplage/251237">Privatimmobilien</a>
+                                    href="https://www.willhaben.at/iad/immobilien/d/eigentumswohnung/wien/wien-1220-donaustadt/maisonettenapartment-mit-terrasse-und-wellnessbreich-inkl-garage-583817238">Willhaben</a>
                             </li>
                             <!-- mein link zu den Inseraten-->
                         </ul>
@@ -1251,14 +1266,13 @@
     <!-- main-footer end -->
 
 
-    <!-- footer-bottom -->
-    <div class="footer-bottom centred">
+     <!-- footer-bottom -->
+     <div class="footer-bottom centred">
         <div class="container">
-            <div class="copyright">© Copyright 2022 <a href="javascript:;">DreamflatforSale</a>. All Rights Reserved</div>
+            <div class="copyright">Copyright @ 2022 <a href="javascript:;">DreamflatforSale</a>. All Rights Reserved</div>
         </div>
     </div>
     <!-- footer-bottom end -->
-
 
     <!--Scroll to top-->
     <div class="scroll-top scroll-to-target" data-target=".main-header"><span class="icon fa fa-angle-up"></span></div>
