--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
     <!-- page-title end -->
 
 
-     <!--social-area
+    <!--social-area
     <div class="social-area centred">
         <div class="container">
             <ul class="social-list">
@@ -158,7 +158,9 @@
                         </div>
                         <div class="single-item">
                             <div class="icon-box"><i class="fa fa-users"></i></div>
-                            <div class="text"><a href="https://www.4m-immo.at/"><b>4M Immobilien</b></a></div>
+                            <div class="text"><a
+                                    href="https://immobiliensuche.edireal.com/4m-immo.at/immobilien/Wohnung-Kauf/%C3%96sterreich/Wien/Wien%2022.,Donaustadt/Maisonettenapartment-mit-Terrasse-und-Wellnessbreich-inkl.-Garage-1003085183?pageIdx=0&itemsPerPage=25&offerType=SELL&keywords=1220+Wien&sorting=MODIFICATION_DATE"><b>4M
+                                        Immobilien</b></a></div>
                         </div>
                         <div class="title">
                             <h4>Mail</h4>
@@ -234,12 +236,14 @@
                         <div class="single-post">
                             <div class="time">Es herbstelt ...</div>
                             <div class="text"><a
-                                    href="https://events.at/was-ist-los-in-wien/neu-im-september-wien/402130658"> ... in Wien
+                                    href="https://events.at/was-ist-los-in-wien/neu-im-september-wien/402130658"> ... in
+                                    Wien
                                 </a></div>
                         </div>
                         <div class="single-post">
                             <div class="time">Jetzt aktuell</div>
-                            <div class="text"><a href="https://www.wien.gv.at/umwelt/gewaesser/donauinsel/">Die Donauinsel - Dein
+                            <div class="text"><a href="https://www.wien.gv.at/umwelt/gewaesser/donauinsel/">Die
+                                    Donauinsel - Dein
                                     Freizeitparadies
                                 </a></div>
                         </div>
@@ -309,7 +313,8 @@
     <!-- footer-bottom -->
     <div class="footer-bottom centred">
         <div class="container">
-            <div class="copyright">Copyright @ 2022 <a href="javascript:;">DreamflatforSale</a>. All Rights Reserved</div>
+            <div class="copyright">Copyright @ 2022 <a href="javascript:;">DreamflatforSale</a>. All Rights Reserved
+            </div>
         </div>
     </div>
     <!-- footer-bottom end -->
